--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-og": "node scripts/generate-og-image.cjs"
   },
   "dependencies": {
     "highlight.js": "^11.11.1",
@@ -18,6 +19,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "sharp": "^0.34.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
