--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "puppeteer": "^24.31.0",
     "sharp": "^0.34.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
