--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "generate-og": "node scripts/generate-og-image.cjs"
+    "preview": "vite preview"
   },
   "dependencies": {
     "highlight.js": "^11.11.1",
@@ -19,8 +18,6 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "puppeteer": "^24.31.0",
-    "sharp": "^0.34.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
